--- a/src/pages/Listing/components/ListingDetails/ListingDetails.scss
+++ b/src/pages/Listing/components/ListingDetails/ListingDetails.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: $spacing-sm;
-    margin: $spacing-lg 0;
+    margin-top: $spacing-lg;
 
     .stat-card {
       display: flex;
@@ -33,7 +33,6 @@
       border-radius: 50px;
       border: 1px solid $border-color;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
 
       .stat-card__icon {
         font-size: 1.5rem;
